--- a/.github/workflows/build-feature.yaml
+++ b/.github/workflows/build-feature.yaml
@@ -1,24 +1,21 @@
-name: build and test feature branch
+name: build and test of the branch
 on:
   push:
     branches:
       - feature/*
-jobs: 
+jobs:
   build-feature:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: pull and checkout from git repository
-
         run: |
-           echo "pulling and checking out from git repository"
-
-      - name: setup java 17 
+          echo "pulling and checking out from git repository"
+      - name: setup java 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin' # See 'Supported distributions' for available options
           java-version: '17'
-
+          distribution: 'temurin'
       - name: build with maven
         run: |
           mvn clean install
@@ -26,5 +23,3 @@ jobs:
 
 
 
-    
-      
